--- a/static/codex/files/lib_object-settings.js.html
+++ b/static/codex/files/lib_object-settings.js.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="utf-8">
-    <title>lib/object-settings.js - Object Settings</title>
+    <title>lib/object-settings.js - object-settings</title>
     <link rel="stylesheet" href="http://yui.yahooapis.com/3.9.1/build/cssgrids/cssgrids-min.css">
     <link rel="stylesheet" href="../assets/vendor/prettify/prettify-min.css">
     <link rel="stylesheet" href="../assets/css/main.css" id="site_styles">
@@ -15,11 +15,11 @@
     <div id="hd" class="yui3-g header">
         <div class="yui3-u-3-4">
             
-                <h1><img src="http://a3d72a45d111006ec192-ec5b80a12b0b09b4d52373336afb4254.r80.cf1.rackcdn.com/usability-dynamics.png" title="Object Settings"></h1>
+                <h1><img src="http://media.usabilitydynamics.com/logo.png" title="object-settings"></h1>
             
         </div>
         <div class="yui3-u-1-4 version">
-            <em>API Docs for: 0.0.6</em>
+            <em>API Docs for: 0.1.0</em>
         </div>
     </div>
     <div id="bd" class="yui3-g">
@@ -100,9 +100,9 @@ require( &#x27;abstract&#x27; ).createModel( module.exports = function Settings(
     return Settings;
   }
 
-  var util       = require( &#x27;util&#x27; );
-  var inherits   = require( &#x27;util&#x27; ).inherits;
-  var _extend    = require( &#x27;util&#x27; )._extend;
+  var util        = require( &#x27;util&#x27; );
+  var inherits    = require( &#x27;util&#x27; ).inherits;
+  var _extend     = require( &#x27;lodash&#x27; ).extend;
 
   // Constructor Properties
   Settings.defineProperties( Settings, {
@@ -225,6 +225,7 @@ require( &#x27;abstract&#x27; ).createModel( module.exports = function Settings(
      * @returns {Object} Context.
      */
     set: function set( key, value ) {
+      console.log( &#x27;set&#x27;, arguments[0] );
 
       // Create object meta if it does not exist
       if( !this._meta ) {
